tests/fixtures/invalid/comma_typedef_const_pointer_slot_assignment.c
typedef int *IntPtr, * const ConstIntSlot;

int main(void) {
    int values[2] = {1, 2};
    ConstIntSlot slot = values;
    slot = values + 1;
    return *slot;
}
